--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div id="container-03" class="container">
         <p>Muito bom! Agora me diz de quantas em quantas horas você precisa tomar o remedio.</p>
         <div class="contador">
-            <i id="left-arrow" class='bx bxs-left-arrow'></i>
+            <i id="left-arrow" class='bx bx-chevrons-left'></i>
             <span id="interval-text">6 em 6 horas</span>
-            <i id="right-arrow" class='bx bxs-right-arrow'></i>
+            <i id="right-arrow" class='bx bx-chevrons-right' ></i>
         </div>
         <input id="ok3" class="btn" type="submit" value="ok">
     </div>
