--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id="container-04" class="container">
-        <p>Show Show! Você deve tomar o seu rémedio às<span id="new-time"></span>!</p>
+        <p id="last-p">Show Show! Você deve tomar o seu rémedio às<span id="new-time"></span>!</p>
     </div>
 
 
