--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 
     <div id="container-01" class="container">
-        <p>Oi neném! Vamos ver qual horário você deve tomar seu rémedio?</p>
+        <p>Oi<span class="txt" id="apelido"></span>! Vamos ver que horas você deve tomar o seu remédio?</p>
         <input id="ok1" class="btn" type="submit" value="ok">
     </div>
 
 
     <div id="container-02" class="container">
-        <p>Vamos lá! Quando foi a ultima vêz que tomou o seu remedio?</p>
+        <p>Vamos lá! Que horas você tomou, ou vai tomar o seu remédio?</p>
         <input id="time" type="time" required>
         <input id="ok2" class="btn" type="submit" value="ok">
     </div>
@@ -35,7 +35,7 @@
     </div>
 
     <div id="container-04" class="container">
-        <p id="last-p">Show Show! Você deve tomar o seu rémedio às<span id="new-time"></span>!</p>
+        <p id="last-p"> <span id="toptop" ></span> <span id="final"></span><span class="txt" id="new-time"></span>!</p>
     </div>
 
 
