--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div id="container-03" class="container">
-        <p>Muito bom! Agora me diz de quantas em quantas horas você precisa tomar o remedio.</p>
+        <p>Muito bom! Agora me diz de quantas em quantas horas você precisa tomar o seu remédio.</p>
         <div class="contador">
             <i id="left-arrow" class='bx bx-chevrons-left'></i>
             <span id="interval-text">6 em 6 horas</span>
